Created Object files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Sportify</string>
+
+    <!-- res/values/strings.xml -->
+
+        <string name="drawer_open">Open</string>
+        <string name="drawer_close">Close</string>
+        <!-- Add other string resources as needed -->
+
 </resources>
